@@ -870,6 +870,9 @@ $ALLOW_SYMLINK = 0;
           ## disables all filter and (slow) automatic share detection:
           shares => [ 'MyFirstShare', 'MySecondShare' ],	#optional
 
+	  ## define a initial directory for a share (don't forget the initial '/'):
+	  initdir => { 'MyFirstShare' => '/starthere' },	#optional
+
           sharealiases => {		#optional
             ## shows 'H: (Home)' instead of 
             ## 'mywindowsfileserver1.my.example.domain.org:MyFirstShare' in the Web interface
